fixed overlapping elements

--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -4,7 +4,6 @@
     text-align: center;
     text-decoration: none;
     color: white;
-    position: fixed;
     min-height: 70px;
     background: rgb(121, 9, 155);
     font-size: 35px;
